# learn-django2

mpidc/: .gitignore  Dockerfile  README.md  agenda_logs.txt  manage.py  pyproject.toml  requirements.txt
mpidc/approval/: models.py  serializers.py  tests.py  urls.py  views.py
mpidc/approval/migrations/: 0001_initial.py  0002_eligibilitycriteria_approvallist_and_more.py  0003_remove_approvallist_act_name_and_more.py  0004_alter_subsectorclearancemapping_subsector.py  0005_usercafservice.py  0006_kyaquestionbank_kyaquestionbankoption_and_more.py  0007_alter_sectorquestionmapping_approval_type_and_more.py  0008_approvallist_timelines.py  0009_remove_kyaquestionbankoption_question.py  0010_remove_approvallist_department_and_more.py  0011_userapprovals_userapprovalitems.py  0013_alter_usercafservice_department_name.py  (+7 more)
mpidc/authentication/: models.py  serializers.py  tests.py  urls.py  utils.py  views.py
mpidc/document_center/: apps.py  models.py  serializer.py  urls.py  utils.py  views.py
mpidc/incentive/: agenda_logs.txt  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
mpidc/master/: clean_pincode.xlsx  clean_pincode_propercase.csv  clean_remove_dupidata.csv  clean_remove_dupidata.xlsx  models.py  serializers.py  urls.py  views.py
mpidc/mpidc/: asgi.py  exceptions.py  settings.py  urls.py  views.py  wsgi.py
mpidc/sws/: apps.py  models.py  natureofbusiness.py  serializers.py  urls.py  utils.py  views.py
mpidc/usermaster/: apps.py  serializers.py  urls.py  views.py
mpidc/userprofile/: models.py  serializers.py  urls.py  utils.py  views.py
(+212 files in other folders)
